--- a/package.json
+++ b/package.json
@@ -3,13 +3,10 @@
   "description": "",
   "version": "0.1.3",
   "license": "MIT",
-  "main": "src/index.ts",
-  "typings": "src/index.ts",
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "files": [
-    "dist/**/*",
-    "src/**/*",
-    "LICENSE",
-    "README.md"
+    "dist"
   ],
   "scripts": {
     "dev": "vite",
