--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "",
   "version": "0.1.5",
   "license": "MIT",
-  "main": "dist/some-chain-sdk.esm.js",
+  "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
     "dist/**/*",
