--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
+/dist
 dist-ssr
 *.local
 
@@ -23,5 +24,5 @@ dist-ssr
 *.sw?
 
 interface
-/proto
+proto
 
