--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
   ],
   "scripts": {
     "dev": "vite",
-    "prod": "tsdx build --tsconfig ./tsconfig.build.json",
+    "build": "tsdx build --tsconfig ./tsconfig.build.json",
     "build:interface": "vue-tsc && vite build",
     "build:proto": "node scripts/build.sh",
+    "build:rollup": "rollup -c",
     "build:all": "yarn run lint:fix & yarn run build & yarn run doc",
     "serve:interface": "vite preview",
     "preview": "vite preview",
@@ -60,7 +61,10 @@
   "devDependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
     "@intlify/vite-plugin-vue-i18n": "^3.4.0",
+    "@rollup/plugin-commonjs": "^22.0.1",
     "@rollup/plugin-inject": "^4.0.4",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-replace": "^4.0.0",
     "@types/google-protobuf": "^3.15.5",
     "@types/lodash": "^4.14.182",
     "@types/long": "^4.0.1",
@@ -73,6 +77,10 @@
     "lint-staged": "^13.0.1",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
+    "rollup": "^2.75.7",
+    "rollup-plugin-dts": "^4.2.2",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-typescript2": "^0.32.1",
     "shx": "^0.3.4",
     "tailwindcss": "^3.1.2",
     "ts-proto": "^1.82.5",
