--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "nprogress": "^0.2.0",
     "pinia": "^2.0.9",
     "protobufjs": "~6.11.2",
+    "qs": "^6.11.0",
     "sha3": "^2.1.4",
     "store2": "^2.13.1",
     "tiny-invariant": "^1.2.0",
@@ -69,6 +70,7 @@
     "@types/lodash": "^4.14.182",
     "@types/long": "^4.0.1",
     "@types/node": "^18.0.0",
+    "@types/qs": "^6.9.7",
     "@vitejs/plugin-vue": "^2.3.3",
     "autoprefixer": "^10.4.7",
     "husky": "^8.0.1",
